Migradted to JDK 17, deps updated, code style, refactoring